<resources>
    <string name="app_name">FashionApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="first_fragment_label">First Fragment</string>

    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="fifth_fragment_label">Fifth Fragment</string>
    <string name="sixth_fragment_label">Sixth Fragment</string>
    <string name="seventh_fragment_label">Seventh Fragment</string>
    <string name="eight_fragment_label">Eight Fragment</string>
    <string name="ninth_fragment_label">Ninth Fragment</string>
    <string name="tenth_fragment_label">Tenth Fragment</string>
    <string name="eleventh_fragment_label">Eleventh Fragment</string>
    <string name="sim_fragment_label">Sim Fragment</string>
    <string name="show_sim_fragment_label">Show Sim Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="camera">촬영하기</string>

<!--    날씨 관련 -->
    <string name="temperature">°C</string>
    <string name="sky1">맑음</string>
    <string name="sky2">구름 조금</string>
    <string name="sky3">구름 많음</string>
    <string name="sky4">흐림</string>

    <string name="rain">비</string>
    <string name="rainsnow">비/눈</string>
    <string name="snow">눈</string>
    <string name="shower">소나기</string>

<!--    타입-->
    <string name="straight">Straight</string>
    <string name="wave">Wave</string>
    <string name="Neutral">Neutral</string>


<!--    스크롤 뷰 추가질문-->
    <string name="more_req_diagnosis_detail">더 자세하게 진단 받을게요</string>
    <string name="more_req_photo">내 스타일과 비슷한 옷 찾아줘</string>
    <string name="more_req_cordi">코디 팁 알려줘</string>
    <string name="more_req_detail">체형에 대해 더 자세하게 알려줘</string>
    <string name="more_req_diagnosis">체형진단해줘</string>
    <string name="more_req_virtual">버츄얼 옷장</string>
    <string name="more_req_studio">패션 스튜디오</string>
    <string name="more_req_lookbook">코디스타그램</string>

    <!--    <string name="ask_wether">날씨에 맞는 옷 추천해줘</string>-->

    <!--
    Resources res = getResources();
    String text = String.format(res.getString(R.string.hello), "아이", "선생님");
    로 변수(문자열) 넣어주기
    -->

<!--    에이닷이 말하는 대사들-->
    <string name="weather_main">점점 추워지는 날씨, 오늘은 \n 어떤 옷을 입고 나가볼까요?</string>
    <string name="type_detail">%s Type에 \n 대해 내가 자세히 \n 알려줄게!</string>
    <string name="recommand_cl">어울리는 %s를 \n 추천해줄게요!</string>
    <string name="cordi_tip">%s Type\n 코디 팁이야!</string>
    <string name="result_type">체형 진단 결과가 나왔어요!</string>
    <string name="take_photo">사진을 찍어주세요!</string>
    <string name="diagnosis">진단을 진행할게요! \n 해당하는 칸을 눌러주세요</string>

<!--    square box-->
    <string name="link_11st">누르면 11번가 링크로 이동해요</string>
    <string name="other_recommand">다른 옷 추천 보기</string>

<!--Straight type-->
    <string name="straight_fabric">어울리는 소재는 면, 울(모), 데님, 가죽입니다. 모두 깔끔한 상태가 어울려요.</string>
    <string name="straight_pattern">어울리는 패턴은 스트라이프, 도트, 플로랄, 보더입니다. 모두 크기가 크고 대비가 강한 게 어울려요.</string>
    <string name="straight_total">흉통이 넓고 허리가 짧은 편으로\n 오버핏보다는 정사이즈가 잘 어울려요.</string>

    <string name="straight_cordi_total">목이 짧아서 목선이 보이는 것이 베스트! \n 셔링, 주름, 프릴, 핀턱은 피해요</string>
    <string name="straight_cordi_top">추천 상의는 \n 브이넥, 라운드넥, 스퀘어넥, 유넥</string>
    <string name="straight_cordi_bottom">추천 하의는 \n일자핏, 부츠컷, H라인, 슬림핏바지, \n스키니진, 스트레이트핏 바지</string>
    <string name="straight_keyword_top">브이넥,라운드넥,스퀘어넥,유넥</string>
    <string name="straight_keyword_bottom">일자핏 바지,부츠컷 바지,슬림핏 바지,H라인 스커트,스키니진,스트레이트핏 바지</string>


    <!--  Wave type  -->
    <string name="wave_fabric">어울리는 소재는 모헤어(두껍지 않은 것), 앙고라, 쉬폰, 에나멜입니다.</string>
    <string name="wave_pattern">어울리는 패턴은 도트, 플로랄, 레오파드, \n지브라입니다. 모두 크기가 작은 게 어울려요.</string>
    <string name="wave_total">가는 뼈, 여리여리한 느낌, 둥근 어깨,\n골반이 발달하고 허리가 길며 다리가 짧은 유형이에요.</string>

    <string name="wave_cordi_total">전체적으로 뼈가 가늘고 상체는 짧게,\n하체는 길어보이게 입는 것이 베스트</string>
    <string name="wave_cordi_top">추천 상의는 \n터틀넥, 크롭 니트. 레이스 블라우스와 \n프릴 블라우스가 베스트</string>
    <string name="wave_cordi_bottom">추천 하의는 \n 하이웨스트 바지, 와이드 슬랙스,\n A라인 또는 머메이드라인 스커트</string>
    <string name="wave_keyword_top">레이스 블라우스,프릴 블라우스,터틀넥 니트,크롭 니트</string>
    <string name="wave_keyword_bottom">하이웨스트 팬츠,A라인 스커트,머메이드라인 스커트,와이드 슬랙스</string>

<!--Neutral type-->
    <string name="natural_fabric">어울리는 소재는 울, 트위드(브리티시), \n코듀로이, 가죽(빈티지)입니다.</string>
    <string name="natural_pattern">어울리는 패턴은 페이즐리, 보타니컬, 카무플라주, 스트라이프입니다. 모두 작지 않고 어느 정도 큰 게 어울려요.</string>
    <string name="natural_total">큰 골격과 평면적인 느낌, \n직각어깨가 특징이에요</string>

    <string name="natural_cordi_total">여유있게 입고 살짝의 노출을 더하면 날씬해보여요. 시크하고 세련된 코디가 베스트</string>
    <string name="natural_cordi_top">추천 상의는 \n 루즈핏, 와이드한 셔츠 및 자켓</string>
    <string name="natural_cordi_bottom">추천 하의는 \n루즈핏 또는 와이드한 핏, \n핀턱이 들어간 슬랙스, 조거팬츠</string>
    <string name="natural_keyword_top">루즈핏 셔츠,와이드 셔츠,루즈핏 자켓,테일러자켓,트위드 자켓</string>
    <string name="natural_keyword_bottom">루즈핏 슬랙스,와이드 슬랙스,핀턱 슬랙스,조거팬츠,와이드 청바지</string>





</resources>