<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RecommandFragment">

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_width="300dp"
        android:layout_height="329dp"
        android:contentDescription="character"
        android:src="@drawable/character"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/adot_talk_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommand_cl"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="@+id/avatar_img"
        app:layout_constraintStart_toStartOf="@+id/avatar_img"
        app:layout_constraintTop_toTopOf="@+id/avatar_img"
        app:layout_constraintVertical_bias="0.135" />

    <android.widget.Button
        android:id="@+id/question_txtview"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:background="@drawable/text_square"
        android:stateListAnimator="@null"
        android:text="@string/link_11st"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adot_talk_txtview"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/other_recommand_btn"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:background="@drawable/text_button"
        android:stateListAnimator="@null"
        android:text="@string/other_recommand"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
        android:layout_marginBottom="20dp"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/other_recommand_btn"
        >

        <LinearLayout
            android:id="@+id/search_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/home_btn"
        />

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_circle"
        android:text="@string/menu_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.414"
        app:srcCompat="@drawable/home_button" />
</androidx.constraintlayout.widget.ConstraintLayout>